jump to cell fix

--- a/packages/react/src/components/Dialog/index.css
+++ b/packages/react/src/components/Dialog/index.css
@@ -7,6 +7,7 @@
   box-shadow: rgb(0 0 0 / 10%) 5px 5px 30px;
   box-sizing: border-box;
   overflow: auto;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
 
 .fortune-dialog-box-button-container {
